--- a/src/view/dashboards/dashboardSignoVital.html
+++ b/src/view/dashboards/dashboardSignoVital.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <!-- Sidebar -->
                 <div class="col-md-2 sidebar p-3">
-                    <a class="navbar-brand center d-flex justify-content-center align-items-center" href="./index.html">
+                    <a class="navbar-brand center d-flex justify-content-center align-items-center" href="../../../index.html">
                         <img src="../../../assets/img/logotipo.png" alt="logo" width="45" height="45">
                         <h5 class="fw-bold text-center">Signo Vital</h5>
                     </a>
@@ -151,7 +151,7 @@
         <p class="footer-texto text-center text-white">"Salud anticipada, bienestar asegurado." </p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="https://x.com/kuprax" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-twitter"></i>
+                <i class="bi bi-twitter-x"></i>
             </a>
             <a href="https://github.com/angeltamayoz" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-github"></i>
