--- a/src/view/dashboards/dashboardPaciente.html
+++ b/src/view/dashboards/dashboardPaciente.html
@@ -18,7 +18,8 @@
             <div class="row">
                 <!-- Sidebar -->
                 <div class="col-md-2 sidebar p-3">
-                    <a class="navbar-brand center d-flex justify-content-center align-items-center" href="./index.html">
+                    <a class="navbar-brand center d-flex justify-content-center align-items-center"
+                        href="../../../index.html">
                         <img src="../../../assets/img/logotipo.png" alt="logo" width="45" height="45">
                         <h5 class="fw-bold text-center">Pacientes</h5>
                     </a>
@@ -93,9 +94,11 @@
                         <div class="row">
                             <!-- Buscador pacientes -->
                             <div class="d-flex col-12 col-md-6 mb-4">
-                                <button class="btn btn-primary botones" type="submit"><i
-                                        class="bi bi-search"></i></button>
-                                <input type="text" class="form-control ms-2" placeholder="Buscar Producto">
+                                <input type="text" id="buscadorPacientes" class="form-control"
+                                    placeholder="Buscar Paciente">
+                                <button class="btn btn-primary botones ms-2" type="button" id="btnBuscarPaciente">
+                                    <i class="bi bi-search"></i>
+                                </button>
                             </div>
                             <div class="col-3"></div>
                             <div class="col-md-3 col-12 d-flex align-items-start justify-content-end">
@@ -144,7 +147,7 @@
         <p class="footer-texto text-center text-white">"Salud anticipada, bienestar asegurado." </p>
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
             <a href="https://x.com/kuprax" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-twitter"></i>
+                <i class="bi bi-twitter-x"></i>
             </a>
             <a href="https://github.com/angeltamayoz" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-github"></i>
