--- a/src/view/medico.html
+++ b/src/view/medico.html
@@ -8,13 +8,19 @@
     <title>Médico</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../assets/styles/estilos.css">
+    <link rel="stylesheet" href="../../assets/styles/estilosView.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg menu navbar-dark">
+        <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
             <div class="container-fluid">
-                <img src="../../assets/img/logotipo.png" alt="logo" width="60" height="60">
+                <a class="navbar-brand" href="#">
+                    <img src="../../assets/img/logotipo.png" alt="logo" width="45" height="45">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -23,42 +29,71 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown
+                                Gestión
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./src/view/paciente.html">Paciente</a></li>
-                                <li><a class="dropdown-item" href="./src/view/medico.html">Medico</a></li>
-                                <li><a class="dropdown-item" href="./src/view/enfermedad.html">Enfermedad</a></li>
-                                <li><a class="dropdown-item" href="./src/view/medicamento.html">Medicamento</a></li>
-                                <li><a class="dropdown-item" href="./src/view/signovital.html">Signo Vital</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/paciente.html">Paciente</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/medico.html">Médico</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/enfermedad.html">Enfermedad</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/medicamento.html">Medicamento</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/signovital.html">Signo Vital</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dashboard
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="../../src/view/dashboards/dashboardPaciente.html">DB
+                                        -
+                                        Paciente</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/dashboards/dashboardMedico.html">DB -
+                                        Médico</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../../src/view/dashboards/dashboardEnfermedad.html">DB -
+                                        Enfermedad</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../../src/view/dashboards/dashboardMedicamento.html">DB -
+                                        Medicamento</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../../src/view/dashboards/dashboardSignoVital.html">DB -
+                                        Signo Vital</a></li>
+                            </ul>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <section class="container my-4">
+        <!-- Banner -->
+        <section class="bannerMedico mt-5 ">
+            <div class="row">
+                <div class="col-12">
+                    <div>
+                        <h1 class="display-4 text-white fw-bold animate__animated animate__fadeIn">Médicos</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Sección 1 -->
+        <section class="seccion1">
+            <div class="container d-flex justify-content-center">
+                <div class="card p-4 shadow mt-5">
+                    <h3>Registra a un especialista</h3>
+                    <p>Registra a un profesional para que pueda seguir estando pendiente de la salud de todos.</p>
+                    <a href="#formMedico" class="btn btn-primary">Crear</a>
+                </div>
+            </div>
+        </section>
+        <!-- Formulario -->
+        <!-- <section class="container my-4" id="formMedico">
             <div class="row">
                 <div class="col-12 col-md-8">
                     <h3>Registro de Médicos</h3>
@@ -121,7 +156,101 @@
                     </form>
                 </div>
             </div>
+        </section> -->
+        <section class="container my-4" id="formMedico">
+            <div class="row">
+                <div class="col-12 col-md-8 mx-auto">
+                    <h3 class="text-center mb-4 suratechTitulo">Registro de Médicos</h3>
+                    <form class="p-5 border rounded shadow">
+                        <div class="row">
+                            <div class="col-6">
+                                <label class="form-label">Nombres</label>
+                                <input type="text" class="form-control" id="nombremedico">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Matrícula profesional</label>
+                                <input type="text" class="form-control" id="matriculamedico">
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                <label class="form-label">Especialidad</label>
+                                <input type="text" class="form-control" id="especialidadmedico">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Salario</label>
+                                <input type="text" class="form-control" id="salariomedico">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <label class="form-label">Teléfono</label>
+                                <input type="number" class="form-control" id="telefonomedico">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">IPS</label>
+                                <input type="text" class="form-control" id="ipsmedico">
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                <label class="form-label">Correo electrónico</label>
+                                <input type="email" class="form-control" id="correomedico">
+                            </div>
+                            <div class="col-6">
+                                <label class="form-label">Seguro</label>
+                                <input type="text" class="form-control" id="seguromedico">
+                            </div>
+                        </div>
+                        <div class="row my-3">
+                            <div class="col-6">
+                                <label class="form-label">Dirección</label>
+                                <input type="text" class="form-control" id="direccionmedico">
+                            </div>
+                            <div class="col-6">
+                                <div class="form-check form-switch my-4">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="disponibilidadmedico">
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">¿Disponible el fin de
+                                        semana?</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary w-100" type="submit" id="botonregistromedico">Registrar</button>
+                    </form>
+                </div>
+            </div>
         </section>
+        <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+            <img class="footer-logo" src="../../assets/img/logotipo.png" alt="Logo">
+            <p class="footer-texto text-center text-white">"Salud anticipada, bienestar asegurado." </p>
+            <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+                <a href="https://x.com/kuprax" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-twitter-x"></i>
+                </a>
+                <a href="https://github.com/angeltamayoz" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://www.instagram.com/angel_tamayo_z/" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="mailto:angeltamayo@micorreo.com" target="_blank" rel="noopener noreferrer">
+                    <i class="bi bi-envelope"></i>
+                </a>
+            </div>
+            <div class="derechos-de-autor text-center">
+                Creado por:
+                <div class="d-flex flex-wrap justify-content-center mt-2">
+                    <span class="mx-2">Valentina Galeano</span>
+                    <span class="mx-2">Angel Tamayo</span>
+                    <span class="mx-2">Julieta Grisales</span>
+                    <span class="mx-2">Carlos Cano</span>
+                </div>
+                <br> (2024) &#169;
+            </div>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -129,5 +258,4 @@
         crossorigin="anonymous"></script>
     <script src="../controllers/Formularios/controladormedicoformulario.js" type="module"></script>
 </body>
-
 </html>
