--- a/src/view/signovital.html
+++ b/src/view/signovital.html
@@ -9,14 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../../assets/styles/estilos.css">
+    <link rel="stylesheet" href="../../assets/styles/estilosView.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top">
             <div class="container-fluid">
-                <img src="../../assets/img/logotipo.png" alt="logo" width="60" height="60">
+                <a class="navbar-brand" href="#">
+                    <img src="../../assets/img/logotipo.png" alt="logo" width="45" height="45">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -25,103 +29,168 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Dropdown
+                                Gestión
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/paciente.html">Paciente</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/medico.html">Médico</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/enfermedad.html">Enfermedad</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/medicamento.html">Medicamento</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/signovital.html">Signo Vital</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Dashboard
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="../../src/view/dashboards/dashboardPaciente.html">DB
+                                        -
+                                        Paciente</a></li>
+                                <li><a class="dropdown-item" href="../../src/view/dashboards/dashboardMedico.html">DB -
+                                        Médico</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../../src/view/dashboards/dashboardEnfermedad.html">DB -
+                                        Enfermedad</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../../src/view/dashboards/dashboardMedicamento.html">DB -
+                                        Medicamento</a></li>
+                                <li><a class="dropdown-item"
+                                        href="../../src/view/dashboards/dashboardSignoVital.html">DB -
+                                        Signo Vital</a></li>
+                            </ul>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
     </header>
-
-    <br><br><br>
-
     <main>
-
-        <section class="container my-5">
-            <div class="row my-5">
-                <div class="col-12 text-center">
-                    <h2>SIGNOS VITALES</h2>
+        <!-- Banner -->
+        <section class="bannerSignoVital mt-5 ">
+            <div class="row">
+                <div class="col-12">
+                    <div>
+                        <h1 class="display-4 text-white fw-bold animate__animated animate__fadeIn">Signo Vital</h1>
+                    </div>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-4 align-self-center animate__animated animate__backInLeft">
-                    <h3>TU SIGNOS VITALES EN LINEA</h3>
-                </div>
-                <div class="col-12 col-md-4 animate__animated animate__backInRight">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fuga ad minus consequuntur
-                        blanditiis provident, quidem tempore deleniti ipsam nulla reprehenderit ab suscipit illo aliquam
-                        dolorum ipsum ea excepturi at hic. Laboriosam soluta iste tenetur eaque. Molestias iusto omnis
-                        porro minus optio impedit placeat possimus, voluptate, nihil sapiente a quam.
-                    </p>
-                </div>
-
-            </div>
-
-            <div class="banner2">
-
-            </div>
-
-            <div class="row justify-content-center my-5">
-                <div class="col-12 col-md-4">
-
-                    <p></p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fuga ad minus consequuntur
-                    blanditiis provident, quidem tempore deleniti ipsam nulla reprehenderit ab suscipit illo aliquam
-                    dolorum ipsum ea excepturi at hic. Laboriosam soluta iste tenetur eaque. Molestias iusto omnis porro
-                    minus optio impedit placeat possimus, voluptate, nihil sapiente a quam.
-                    </p>
-                </div>
-                <div class="col-12 col-md-4 align-self-center">
-                    <h3>MEDICINA VIRTUAL</h3>
-                </div>
-
-            </div>
-
         </section>
-
-        <section class="container-fluid menu">
-            <div class="row justify-content-center p-5">
-                <div class="col-12 col-md-5">
-                    <img src="../../assets/img/cuerpo.png" alt="" class="img-fluid mx-auto d-block">
+        <section class="container justify-content-center">
+            <div class="row">
+                <div class="col-12 d-flex justify-content-center mt-5">
+                    <a href="#formularioSignoVital" class="btn btn-primary btnIrSignoVital fw-bold p-2">Registrar</a>
                 </div>
-                <div class="col-12 col-md-5 text-white border-start">
-                    <h3>REGISTRA TU SIGNO VITAL</h3>
-                    <form>
+            </div>
+        </section>
+        <!-- Información general -->
+        <section class="container my-5">
+            <h2 class="text-center fw-bold text-primary animate__animated animate__heartBeat">¡Conoce la Importancia de
+                tus Signos Vitales!</h2>
+            <hr>
+            <div class="row justify-content-center mt-4">
+                <div class="col-12 col-md-5 mb-3">
+                    <div class="card shadow p-3 animate__animated animate__zoomInLeft">
+                        <p>Tomarte los signos vitales regularmente ayuda a detectar posibles problemas médicos antes de
+                            que se vuelvan graves.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-5 mb-3">
+                    <div class="card shadow p-3 animate__animated animate__zoomInRight">
+                        <p>La presión arterial, el ritmo cardíaco y la temperatura son indicadores clave de tu
+                            bienestar.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-5 mb-3">
+                    <div class="card shadow p-3 animate__animated animate__zoomInLeft">
+                        <p>En SURATECH creemos que la prevención es la mejor medicina. Registrar tus signos vitales es
+                            clave para cuidar de ti.</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-5 mb-3">
+                    <div class="card shadow p-3 animate__animated animate__zoomInRight">
+                        <p>El monitoreo constante permite a los médicos personalizar tratamientos. ¡Toma el control de
+                            tu salud!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Sección colapsable para más información -->
+        <section class="my-5 seccionColapsableSignosVitales">
+            <section class="container mt-3">
+                <h2 class="text-center">Detalles Adicionales</h2>
+                <div class="accordion" id="infoAccordion">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#info1">
+                                ¿Qué son los signos vitales?
+                            </button>
+                        </h2>
+                        <div id="info1" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                Los signos vitales son medidas que reflejan el funcionamiento de las funciones más
+                                básicas
+                                del cuerpo, como el ritmo cardíaco, la frecuencia respiratoria, la temperatura y la
+                                presión
+                                arterial.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#info2">
+                                Beneficios de su monitoreo
+                            </button>
+                        </h2>
+                        <div id="info2" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                El monitoreo de signos vitales permite detectar tempranamente problemas de salud,
+                                prevenir
+                                complicaciones en enfermedades crónicas y ajustar tratamientos de forma personalizada.
+                                Mejora la atención médica al brindar datos en tiempo real para decisiones rápidas, y,
+                                con
+                                dispositivos portátiles, facilita la monitorización remota, reduciendo
+                                hospitalizaciones. Es
+                                crucial para deportistas en la optimización de entrenamientos y para personas mayores o
+                                crónicas, brindando tranquilidad y seguridad mediante alertas en emergencias. Además,
+                                apoya
+                                la salud pública al identificar tendencias en brotes epidémicos, controlando la
+                                propagación
+                                de enfermedades.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <!-- Formulario -->
+        <section class="container-fluid">
+            <div class="row justify-content-center p-5" id="formularioSignoVital">
+                <div class="col-12 col-md-5 formularioImgSV">
+                    <img src="../../assets/img/signosvitales1SignoVital.png" class="shadow rounded" width="500px"
+                        alt="signoVital">
+                </div>
+                <div class="col-12 col-md-7 text-white">
+                    <h3 class="text-center mb-4 suratechTitulo">REGISTRA TU SIGNO VITAL</h3>
+                    <form class="p-5 border rounded shadow">
                         <div class="mb-3">
-                            <label class="form-label">Fecha de la toma</label>
+                            <label class="form-label text-dark">Fecha de la toma</label>
                             <input type="date" class="form-control" id="fechasignovital">
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Nombre</label>
+                            <label class="form-label text-dark">Nombre</label>
                             <input type="text" class="form-control" id="nombresignovital">
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Valor</label>
+                            <label class="form-label text-dark">Valor</label>
                             <input type="text" class="form-control" id="valorsignovital">
                         </div>
                         <button class="btn btn-primary" id="botonregistrosignovital">ENVIAR</button>
@@ -130,8 +199,36 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+        <img class="footer-logo" src="../../assets/img/logotipo.png" alt="Logo">
+        <p class="footer-texto text-center text-white">"Salud anticipada, bienestar asegurado." </p>
+        <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+            <a href="https://x.com/kuprax" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-twitter-x"></i>
+            </a>
+            <a href="https://github.com/angeltamayoz" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/angel_tamayo_z/" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a href="mailto:angeltamayo@micorreo.com" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-envelope"></i>
+            </a>
+        </div>
+        <div class="derechos-de-autor text-center">
+            Creado por:
+            <div class="d-flex flex-wrap justify-content-center mt-2">
+                <span class="mx-2">Valentina Galeano</span>
+                <span class="mx-2">Angel Tamayo</span>
+                <span class="mx-2">Julieta Grisales</span>
+                <span class="mx-2">Carlos Cano</span>
+            </div>
+            <br> (2024) &#169;
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
