--- a/src/view/dashboards/dashboardMedico.html
+++ b/src/view/dashboards/dashboardMedico.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicos</title>
+    <link rel="shortcut icon" href="../../../assets/img/logotipo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -76,12 +77,6 @@
                     <!-- Topbar -->
                     <nav class="navbar topbar mb-4">
                         <div class="container-fluid">
-                            <form class="d-flex w-50">
-                                <input class="form-control me-2" type="search" placeholder="Search for..."
-                                    aria-label="Search">
-                                <button class="btn btn-primary botones" type="submit"><i
-                                        class="bi bi-search"></i></button>
-                            </form>
                             <div class="d-flex align-items-center">
                                 <span class="me-3">Douglas McGee</span>
                                 <img src="https://via.placeholder.com/40" alt="Profile" class="rounded-circle">
